--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "vite": "^4.4.5"
+    "vite": "^4.4.5",
+    "wouter": "^2.8.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
